# ts-ml-bundle-cli

./: .gitignore  LICENSE  README.md  __init__.py.j2  databricks.yaml.j2  deploy_serving.py.j2  io.py.j2  mlflow_utils.py.j2  preprocess.py.j2  pyproject.toml  readme.md.j2  register.py.j2  requirements.txt.j2  train.py.j2
demo/my-ml-project1/: README.md  requirements.txt
demo/my-ml-project1/ci/: github-actions.yml
demo/my-ml-project1/src/ds/: register.py
test-ml-project/: README.md  requirements-lock.txt
test-ml-project/jobs/: job_train.yml
test-ml-project/notebooks/: 01_preprocess.py
ts-ml-bundle/: __init__.py
ts_ml_bundle/: __init__.py  cli.py  generator.py
