[tool.poetry]
name = "ts-ml-bundle"
version = "0.1.0"
description = "CLI tool to generate Databricks ML platform project structure with governance and best practices"
authors = ["Satyendra <skumar@tetrascience.com>"]
readme = "README.md"
homepage = "https://github.com/satendra4u/ts-ml-bundle-cli"
repository = "https://github.com/satendra4u/ts-ml-bundle-cli"
documentation = "https://github.com/satendra4u/ts-ml-bundle-cli"
keywords = ["databricks", "mlops", "ml-platform", "template", "cli"]
packages = [
    { include = "ts_ml_bundle" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.0.0"
jinja2 = "^3.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
ts-ml-init = "ts_ml_bundle.cli:main"
tml-init = "ts_ml_bundle.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
